--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-react": "^7.33.1",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "helmet": "^7.0.0",
+    "mongoose": "^7.4.1",
+    "validator": "^13.9.0"
   }
 }
