--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "validator": "^13.9.0"
+    "validator": "^13.11.0"
   }
 }
